# flatpak-ext

./: .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  flatpak-ext-run.html  generated-sources.json  index.html  io.github.ryanabx.flatrun.yml  io.github.ryanabx.portapak.yml  justfile  print.html  searchindex.js  searchindex.json
.github/workflows/: docs.yml  flatpak.yml  rust.yml
.rpm/: flatrun.spec  portapak.spec  setup.sh
data/: flatpak-ext.desktop  flatpak-ext.metainfo.xml  flatrun.desktop  flatrun.metainfo.xml  io.github.ryanabx.Portapak.desktop  io.github.ryanabx.flatrun-bundle.desktop  io.github.ryanabx.flatrun.desktop  io.github.ryanabx.flatrun.metainfo.xml  io.github.ryanabx.flatrun.open.desktop  io.github.ryanabx.portapak.desktop  io.github.ryanabx.portapak.metainfo.xml  io.ryanabx.Portapak.desktop  net.ryanabx.Portapak.desktop
data/flatpak/: flatpak.pc
docs/: book.toml  description.md  index.md
docs/src/: SUMMARY.md  index.md
flatpak/: flatpak-unsandbox-sources.json  flatrun-sources.json  generated-sources.json  io.github.ryanabx.flatpak-ext.yml  io.github.ryanabx.flatrun.yml  io.github.ryanabx.portapak.yml  libflatpak.json  library-escape.sh
flatrun/: Cargo.toml
flatrun-agent/: Cargo.toml
flatrun-agent/src/: flatpak.rs  main.rs
flatrun-host/: Cargo.toml
flatrun-host/src/: main.rs
flatrun/src/: flatpak.rs  gui.rs  main.rs  remotes.rs
flatrun/ui/: ui.slint
src/: bin.rs  config.rs  flathub.rs  flatpak.rs  flatpak_repo.rs  gui.rs  lib.rs  main.rs  portapak_run.rs  remotes.rs  run.rs  run_temp.rs  run_temp_tools.rs  utils.rs
src/lib/: lib.rs  types.rs
tools/: build-bundle.sh  flatpak-host-launch.py
ui/: ui.slint
