[package]
name = "flatrun"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Brue <ryanbrue@gmail.com>"]
readme = "../README.md"
homepage = "https://ryanabx.github.io/flatrun"
repository = "https://github.com/ryanabx/flatrun"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ashpd = "0.8.1"
async-std = { version = "1.12.0", features = ["attributes"] }
indicatif = "0.17.8"
slint = "1.6.0"
tempfile = "3.10.1"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
libflatpak = "0.5.0"
log = "0.4.21"
flatpak-unsandbox = "0.1.0"


[build-dependencies]
slint-build = "1.6.0"
