[package]
name = "flatrun"
version = "0.2.0"
edition = "2021"
authors = ["Ryan Brue <ryanbrue@gmail.com>"]
readme = "README.md"
homepage = "https://ryanabx.github.io/flatrun"
repository = "https://github.com/ryanabx/flatrun"
license = "MIT"

[lib]
name = "libflatrun"
path = "src/lib.rs"

[[bin]]
name = "flatrun"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustix = { version = "0.38.34", features = ["process"] }
libflatpak = "0.5.0"
rand = "0.8.5"
signal-hook = "0.3.17"
log = "0.4.21"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
simple_logger = "5.0.0"
