[package]
name = "flatpak-ext"
version = "0.2.0"
edition = "2021"
authors = ["Ryan Brue <ryanbrue.dev@gmail.com>"]
readme = "README.md"
homepage = "https://linux-packaging-rs.github.io/flatpak-ext"
repository = "https://github.com/linux-packaging-rs/flatpak-ext"
license = "MIT"

[lib]
name = "libflatpak_ext"
path = "src/lib/lib.rs"

[[bin]]
name = "flatpak-ext"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustix = { version = "0.38.34", features = ["process"] }
libflatpak = "0.5.0"
rand = "0.8.5"
signal-hook = "0.3.17"
log = "0.4.21"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
simple_logger = "5.0.0"
