[package]
name = "flatrun"
version = "0.1.3"
edition = "2021"
authors = ["Ryan Brue <ryanbrue@gmail.com>"]
readme = "../README.md"
homepage = "https://ryanabx.github.io/flatrun"
repository = "https://github.com/ryanabx/flatrun"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ashpd = "0.8.1"
async-std = { version = "1.12.0", features = ["attributes"] }
clap.workspace = true
env_logger.workspace = true
log.workspace = true
flatpak-unsandbox = {git = "https://github.com/ryanabx/flatpak-unsandbox", branch="changes/forward-dirs"}
iced = "0.12.1"
rand = "0.8.5"
rustix = "0.38.34"
